# EscapeTheTerminal

./: .gitignore  LICENSE  README.md  VISIONDOCUMENT.md  escape.py  pyproject.toml
.github/workflows/: ci.yml
data/: escape.plan  mem.fragment  port.scanner  treasure.txt
data/npc/: daemon.dialog  dreamer.dialog  wanderer.dialog
docs/: GAME_MECHANICS.md  NPC_DIALOG.md  PLUGIN_DEVELOPMENT.md  STORY_PHASES.md
escape/: __init__.py  cli.py  commands.py  filesystem.py  game.py  npc.py
escape/data/: auth.token  escape.code  loop.code  lucid.note  world.json
escape/plugins/: __init__.py  cipher.py  counter.py  dance.py  puzzle.py  (+3 more)
escape_the_terminal-0.1.0.dist-info/: METADATA  entry_points.txt
tests/: test_achievements.py  test_achievements_command.py  test_audit.py  test_autosave.py  test_basic.py  test_cipher_plugin.py  test_cli_flags.py  test_color_output.py  test_combine_command.py  test_corruption_progression.py  test_dialog_extension.py  test_emotion_state.py  test_entrypoint.py  test_extra_dirs.py  test_give_command.py  test_glitch_dir_tree.py  test_glitched_dialog.py  test_help_all_commands.py  test_hidden_directory_visibility.py  test_history_command.py  test_identity_log.py  test_journal.py  test_logs_grep.py  test_loop_runtime.py  test_map_command.py  test_memory_logs.py  test_network.py  test_new_features.py  test_npc_guardian.py  test_npc_mentor.py  test_npc_sage.py  test_npc_sandboxer.py  test_npc_state.py  test_npc_technomancer.py  test_npc_trust.py  test_plugins.py  test_prompt_command.py  test_prompt_env.py  test_quest.py  test_quest_chain.py  (+12 more)
(+59 files in other folders)
