[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "escape-the-terminal"
version = "0.1.0"
description = "A retro cybertext adventure in the terminal."
readme = "README.md"
authors = [{name="EscapeTheTerminal Contributors"}]
license = {file = "LICENSE"}
requires-python = ">=3.8"


[project.scripts]
escape-terminal = "escape.cli:main"
validate-dialog = "escape.utils.validate_dialog:main"

[tool.setuptools]
packages = ["escape"]

[project.optional-dependencies]
test = ["pytest>=7.0"]
